--- a/x86/.config
+++ b/x86/.config
@@ -100,6 +100,7 @@ CONFIG_PACKAGE_edgeport-firmware=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_fibocom-dial=y
 CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_gre=y
 CONFIG_PACKAGE_grub-conf=y
@@ -261,6 +262,7 @@ CONFIG_PACKAGE_kmod-fs-xfs=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-gre=y
 CONFIG_PACKAGE_kmod-gre6=y
+CONFIG_PACKAGE_kmod-gobinet=y
 CONFIG_PACKAGE_kmod-hfcmulti=y
 CONFIG_PACKAGE_kmod-hfcpci=y
 CONFIG_PACKAGE_kmod-hid=y
@@ -326,6 +328,11 @@ CONFIG_PACKAGE_kmod-libfc=y
 CONFIG_PACKAGE_kmod-libfcoe=y
 CONFIG_PACKAGE_kmod-libsas=y
 CONFIG_PACKAGE_kmod-loop=y
+CONFIG_PACKAGE_kmod-mhi-net=y
+CONFIG_PACKAGE_kmod-mhi-pci-generic=y
+CONFIG_PACKAGE_kmod-mhi-wwan-mbim=y
+CONFIG_PACKAGE_kmod-mhi-wwan-ctrl=y
+CONFIG_PACKAGE_kmod-mii=y
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-macsec=y
 CONFIG_PACKAGE_kmod-macvlan=y
@@ -366,6 +373,7 @@ CONFIG_PACKAGE_kmod-mt7921-firmware=y
 CONFIG_PACKAGE_kmod-mt7921e=y
 CONFIG_PACKAGE_kmod-mt7921u=y
 CONFIG_PACKAGE_kmod-mt7922-firmware=y
+CONFIG_PACKAGE_kmod-mtk-pcie-wwan-m80=y
 CONFIG_PACKAGE_kmod-mvsas=y
 CONFIG_PACKAGE_kmod-mwifiex-pcie=y
 CONFIG_PACKAGE_kmod-nat46=y
@@ -388,6 +396,7 @@ CONFIG_PACKAGE_kmod-niu=y
 CONFIG_PACKAGE_kmod-nls-cp936=y
 CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-oid-registry=y
+CONFIG_PACKAGE_kmod-pcie_mhi=y
 CONFIG_PACKAGE_kmod-pcnet32=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
 CONFIG_PACKAGE_kmod-phy-bcm84881=y
@@ -400,6 +409,7 @@ CONFIG_PACKAGE_kmod-pptp=y
 CONFIG_PACKAGE_kmod-qed=y
 CONFIG_PACKAGE_kmod-qede=y
 CONFIG_PACKAGE_kmod-qedf=y
+CONFIG_PACKAGE_kmod-qrtr-mhi=y
 CONFIG_PACKAGE_kmod-r6040=y
 CONFIG_PACKAGE_kmod-r8125=y
 CONFIG_PACKAGE_kmod-r8126=y
@@ -498,6 +508,7 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-printer=y
@@ -687,6 +698,8 @@ CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mdadm=y
+CONFIG_PACKAGE_meig-cm=y
+CONFIG_PACKAGE_minicom=y
 CONFIG_PACKAGE_miniupnpd-iptables=y
 CONFIG_PACKAGE_modemmanager=y
 CONFIG_PACKAGE_mwifiex-pcie-firmware=y
@@ -734,6 +747,7 @@ CONFIG_PACKAGE_proto-bonding=y
 CONFIG_PACKAGE_qed-firmware=y
 CONFIG_PACKAGE_qmi-utils=y
 CONFIG_PACKAGE_quickstart=y
+CONFIG_PACKAGE_quectel-CM-5G=y
 CONFIG_PACKAGE_r8152-firmware=y
 CONFIG_PACKAGE_radeon-firmware=y
 CONFIG_PACKAGE_relayd=y
