--- a/x86/.config
+++ b/x86/.config
@@ -840,6 +840,9 @@ CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PCRE_JIT_ENABLED=y
 CONFIG_PERL_NOCOMMENT=y
 CONFIG_PERL_THREADS=y
+CONFIG_PCI=y
+CONFIG_PCI_MSI=y
+CONFIG_PCIEPORTBUS=y
 CONFIG_RPCBIND_LIBWRAP=y
 CONFIG_RPCBIND_RMTCALLS=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
