--- a/.github/workflows/build-istoreos.yml
+++ b/.github/workflows/build-istoreos.yml
@@ -41,6 +41,9 @@ env:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write  # 授予写入权限
+      packages: read   # 授予读取包权限
     strategy:
       matrix:
         REPO_BRANCH:
