--- a/x86/.config
+++ b/x86/.config
@@ -329,6 +329,8 @@ CONFIG_PACKAGE_kmod-libfcoe=y
 CONFIG_PACKAGE_kmod-libsas=y
 CONFIG_PACKAGE_kmod-loop=y
 CONFIG_PACKAGE_kmod-mhi-net=y
+CONFIG_PACKAGE_kmod-mhi-bus=y
+CONFIG_PACKAGE_kmod-mhi-qcom=y
 CONFIG_PACKAGE_kmod-mhi-pci-generic=y
 CONFIG_PACKAGE_kmod-mhi-wwan-mbim=y
 CONFIG_PACKAGE_kmod-mhi-wwan-ctrl=y
@@ -396,6 +398,7 @@ CONFIG_PACKAGE_kmod-niu=y
 CONFIG_PACKAGE_kmod-nls-cp936=y
 CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-oid-registry=y
+CONFIG_PACKAGE_kmod-pcie=y
 CONFIG_PACKAGE_kmod-pcie_mhi=y
 CONFIG_PACKAGE_kmod-pcnet32=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
@@ -499,6 +502,7 @@ CONFIG_PACKAGE_kmod-usb-net-ipheth=y
 CONFIG_PACKAGE_kmod-usb-net-kalmia=y
 CONFIG_PACKAGE_kmod-usb-net-kaweth=y
 CONFIG_PACKAGE_kmod-usb-net-mcs7830=y
+CONFIG_PACKAGE_kmod-usb-net-mbim=y
 CONFIG_PACKAGE_kmod-usb-net-pegasus=y
 CONFIG_PACKAGE_kmod-usb-net-pl=y
 CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
@@ -508,7 +512,6 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
-CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-printer=y
@@ -582,7 +585,34 @@ CONFIG_PACKAGE_libgnutls=y
 CONFIG_PACKAGE_libgpg-error=y
 CONFIG_PACKAGE_libiperf3=y
 CONFIG_PACKAGE_libipset=y
-# CONFIG_PACKAGE_libiptext-nft is not set
+# 5G模块支持 https://github.com/Siriling/5G-Modem-Support
+# 5G驱动
+CONFIG_PACKAGE_quectel_Gobinet=y
+CONFIG_PACKAGE_quectel_MHI=y
+CONFIG_PACKAGE_quectel_QMI_WWAN=y
+CONFIG_PACKAGE_quectel_SRPD_PCIE=y
+CONFIG_PACKAGE_fibocom_MHI=y
+CONFIG_PACKAGE_fibocom_QMI_WWAN=y
+# 拨号工具
+CONFIG_PACKAGE_quectel_cm_5G=y
+# 图形化界面设置
+# 拨号
+CONFIG_PACKAGE_luci-app-modem=y
+CONFIG_PACKAGE_luci-app-hypermodem=y
+CONFIG_PACKAGE_luci-app-usbmodem=y
+CONFIG_PACKAGE_luci-app-pcimodem=y
+CONFIG_PACKAGE_luci-app-gobinetmodem=y
+CONFIG_PACKAGE_luci-app-spdmodem=y
+# 信息插件
+CONFIG_PACKAGE_rooter=y
+# 简化版信息插件
+CONFIG_PACKAGE_luci-app-cpe=y
+# AT命令工具
+CONFIG_PACKAGE_sendat=y
+CONFIG_PACKAGE_sms-tool=y
+# 短信工具
+CONFIG_PACKAGE_luci-app-sms-tool=y
+CONFIG_PACKAGE_libiptext-nft is not set
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-data=y
 CONFIG_PACKAGE_libiwinfo-lua=y
@@ -744,12 +774,15 @@ CONFIG_PACKAGE_perlbase-xsloader=y
 CONFIG_PACKAGE_procps-ng=y
 CONFIG_PACKAGE_procps-ng-vmstat=y
 CONFIG_PACKAGE_proto-bonding=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
 CONFIG_PACKAGE_qed-firmware=y
 CONFIG_PACKAGE_qmi-utils=y
 CONFIG_PACKAGE_quickstart=y
 CONFIG_PACKAGE_quectel-CM-5G=y
 CONFIG_PACKAGE_r8152-firmware=y
 CONFIG_PACKAGE_radeon-firmware=y
+CONFIG_PACKAGE_mhi-utils=y
 CONFIG_PACKAGE_relayd=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcbind=y
@@ -819,6 +852,7 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_umbim=y
+CONFIG_PACKAGE_mbim-utils=y
 CONFIG_PACKAGE_unishare=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_uqmi=y
@@ -842,6 +876,7 @@ CONFIG_PERL_NOCOMMENT=y
 CONFIG_PERL_THREADS=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
+CONFIG_MHI_BUS=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_RPCBIND_LIBWRAP=y
 CONFIG_RPCBIND_RMTCALLS=y
