--- a/x86/.config
+++ b/x86/.config
@@ -612,7 +612,7 @@ CONFIG_PACKAGE_sendat=y
 CONFIG_PACKAGE_sms-tool=y
 # 短信工具
 CONFIG_PACKAGE_luci-app-sms-tool=y
-CONFIG_PACKAGE_libiptext-nft is not set
+# CONFIG_PACKAGE_libiptext-nft is not set
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-data=y
 CONFIG_PACKAGE_libiwinfo-lua=y
